# spot_controller

./: CMakeLists.txt  README.md  package.xml  uncrustify.cfg
model/launch/: model.launch
spot_config/: config.json  package.xml
spot_config/config/gait/: gait.yaml
spot_config/include/: gait_config.h
spot_config/launch/: bringup.launch  gazebo.launch
spot_config/launch/include/: move_base.launch
spot_description/: CMakeLists.txt  package.xml
spot_description/config/: device.yaml  joint.yaml  joint_config.yaml  limit.yaml  robot.yaml
spot_description/launch/: description.launch  model.launch  view_urdf.launch
spot_description/rviz/: default.rviz
spot_description/urdf/: spotmicroai.urdf  spotmicroai.urdf.xacro
spot_driver/: CMakeLists.txt  package.xml
spot_driver/include/: servo.h
spot_driver/scripts/: servo.py
spot_driver/src/: servo.cpp
spot_interface/: CMakeLists.txt  package.xml
spot_interface/include/: simulation.h  state.h
spot_interface/launch/: local.launch  remote.launch
spot_interface/src/: simulation.cpp  state.cpp
spot_planner/: CMakeLists.txt  package.xml
spot_planner/include/: joycon.h  paw.h  stand.h  sway.h  walk.h
spot_planner/launch/: joycon.launch  paw.launch  stand.launch  sway.launch  walk.launch
spot_planner/src/: joycon.cpp  paw.cpp  stand.cpp  sway.cpp  walk.cpp
