<?xml version="1.0"?>
<package format="2">
  <name>spot_description</name>
  <version>0.1.0</version>
  <description>SpotMicroAi Description Package</description>

  <maintainer email="h.krbys.robot@gmail.com">h_krbys</maintainer>
  <author     email="h.krbys.robot@gmail.com">h_krbys</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>