<?xml version="1.0"?>
<package format="2">

  <!-- Package information -->
  <name>spot_driver</name>
  <version>0.0.0</version>
  <description>Hardware Manager for SpotMicroAI</description>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Author information -->
  <maintainer email="h.krbys.robot@gmail.com">h_krbys</maintainer>
  <author     email="h.krbys.robot@gmail.com">h_krbys</author>
  <url        type ="qiita">qiita</url>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>

</package>